add tag system, sorting system with tag, Document for article, post, tag